// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sendPageView is called from child component if two page tracking compontents are in the same hierarchy 1`] = `
[
  {
    "dimensions": undefined,
    "title": "Hello world from child page",
  },
]
`;

exports[`sendPageView is called on component mounth  1`] = `
[
  {
    "dimensions": undefined,
    "title": "Hello world",
  },
]
`;

exports[`sendPageView is called on component update if url is untracked 1`] = `
[
  [
    {
      "dimensions": undefined,
      "title": "Hello world",
    },
  ],
  [
    {
      "dimensions": undefined,
      "title": "Hello world",
    },
  ],
]
`;

exports[`sendPageView is not called on component update if url is tracked 1`] = `
[
  {
    "dimensions": undefined,
    "title": "Hello world",
  },
]
`;

exports[`withTracker HOC renderers Page correctly 1`] = `
<div>
  <h1>
    Main Page
  </h1>
</div>
`;
